--- a/shortcodes/widgets/flights.yaml
+++ b/shortcodes/widgets/flights.yaml
@@ -1,6 +1,6 @@
 paths:
   # перелеты
-  tp_flights_price_map_widget:
+  tp_map_widget:
     get:
       description: "Авиабилеты. Карта цен. Интерактивная карта со схемой рейсов из указанного или автоматически
       определенного города вылета. Клик в любом месте карты перенаправит пользователя на map.aviasales.ru."
@@ -10,7 +10,7 @@ paths:
         200:
           description: "Получаем аттрибуты формы с данными"
           schema:
-            $ref: '#/models/properties/tp_shortcode_flights_prices_map'
+            $ref: '#/models/properties/tp_map_widget'
     put: &widgetPutResponse
       tags: *widgetFlightsTags
       description: 'Сохраняем данные'
@@ -29,25 +29,8 @@ paths:
         200:
           description: "Восстанавливаем значения к первоначальным, вызывается по нажатию кнопки reset"
           schema:
-            $ref: '#/models/properties/tp_shortcode_flights_prices_map'
-  tp_hotels_map_widget:
-    get:
-      description: "Отели. Карта отелей. Карта с доступными отелями и примерными ценами на них в выбранном месте."
-      tags: *widgetFlightsTags
-      responses:
-        200:
-          description: "Получаем аттрибуты формы с данными"
-          schema:
-            $ref: '#/models/properties/tp_shortcode_flights_hotels_map'
-    put: *widgetPutResponse
-    delete:
-      tags: *widgetFlightsTags
-      responses:
-        200:
-          description: "Восстанавливаем значения к первоначальным, вызывается по нажатию кнопки reset"
-          schema:
-            $ref: '#/models/properties/tp_shortcode_flights_hotels_map'
-  tp_flights_low_price_calendar_widget:
+            $ref: '#/models/properties/tp_map_widget'
+  tp_calendar_widget:
     get:
       description: "Авиабилеты. Календарь низких цен. Минимальные цены на перелет по выбранному направлению
       на множество дат."
@@ -56,7 +39,7 @@ paths:
         200:
           description: "Получаем аттрибуты формы с данными"
           schema:
-            $ref: '#/models/properties/tp_shortcode_flights_low_price_calendar'
+            $ref: '#/models/properties/tp_calendar_widget'
     put: *widgetPutResponse
     delete:
       tags: *widgetFlightsTags
@@ -64,8 +47,8 @@ paths:
         200:
           description: "Восстанавливаем значения к первоначальным, вызывается по нажатию кнопки reset"
           schema:
-            $ref: '#/models/properties/tp_shortcode_flights_low_price_calendar'
-  tp_flights_price_change_subscription_widget:
+            $ref: '#/models/properties/tp_calendar_widget'
+  tp_subscriptions_widget:
     get:
       description: "Авиабилеты. Подписка на изменение цен. Уведомления о изменении цены на перелет по направлению
       в выбранные даты/месяца."
@@ -74,7 +57,7 @@ paths:
         200:
           description: "Получаем аттрибуты формы с данными"
           schema:
-            $ref: '#/models/properties/tp_shortcode_flights_price_change_subscription'
+            $ref: '#/models/properties/tp_subscriptions_widget'
     put: *widgetPutResponse
     delete:
       tags: *widgetFlightsTags
@@ -82,26 +65,8 @@ paths:
         200:
           description: "Восстанавливаем значения к первоначальным, вызывается по нажатию кнопки reset"
           schema:
-            $ref: '#/models/properties/tp_shortcode_flights_price_change_subscription'
-  tp_flights_hotel_widget:
-    get:
-      description: "Виджет отеля. Краткая информация про конкретный отель с возможностью выбора дат проживания,
-      поиском цены и переходом сразу на страницу бронирования (минуя Hotellook)."
-      tags: *widgetFlightsTags
-      responses:
-        200:
-          description: "Получаем аттрибуты формы с данными"
-          schema:
-            $ref: '#/models/properties/tp_shortcode_flights_hotel_widget'
-    put: *widgetPutResponse
-    delete:
-      tags: *widgetFlightsTags
-      responses:
-        200:
-          description: "Восстанавливаем значения к первоначальным, вызывается по нажатию кнопки reset"
-          schema:
-            $ref: '#/models/properties/tp_shortcode_flights_hotel_widget'
-  tp_flights_popular_route_widget:
+            $ref: '#/models/properties/tp_subscriptions_widget'
+  tp_popular_routes_widget:
     get:
       description: "Авиабилеты. Популярные направления. Цены на перелет в город с города вылета пользователя
       и других популярных направлений."
@@ -110,7 +75,7 @@ paths:
         200:
           description: "Получаем аттрибуты формы с данными"
           schema:
-            $ref: '#/models/properties/tp_shortcode_flights_popular_route'
+            $ref: '#/models/properties/tp_popular_routes_widget'
     put: *widgetPutResponse
     delete:
       tags: *widgetFlightsTags
@@ -118,25 +83,8 @@ paths:
         200:
           description: "Восстанавливаем значения к первоначальным, вызывается по нажатию кнопки reset"
           schema:
-            $ref: '#/models/properties/tp_shortcode_flights_popular_route'
-  tp_hotels_selection_widget:
-    get:
-      description: "Отели. Подбороки. Автоматические или вручную созданные подборки отелей в городе."
-      tags: *widgetFlightsTags
-      responses:
-        200:
-          description: "Получаем аттрибуты формы с данными"
-          schema:
-            $ref: '#/models/properties/tp_shortcode_flights_hotels_selection'
-    put: *widgetPutResponse
-    delete:
-      tags: *widgetFlightsTags
-      responses:
-        200:
-          description: "Восстанавливаем значения к первоначальным, вызывается по нажатию кнопки reset"
-          schema:
-            $ref: '#/models/properties/tp_shortcode_flights_hotels_selection'
-  tp_flights_special_offer_widget:
+            $ref: '#/models/properties/tp_popular_routes_widget'
+  tp_ducklett_widget:
     get:
       description: "Авиабилеты. Спецпредложения. Красивая и удобная визуализация данных о спецпредложениях
       авиакомпаний."
@@ -145,7 +93,7 @@ paths:
         200:
           description: "Получаем аттрибуты формы с данными"
           schema:
-            $ref: '#/models/properties/tp_shortcode_flights_special_offer'
+            $ref: '#/models/properties/tp_ducklett_widget'
     put: *widgetPutResponse
     delete:
       tags: *widgetFlightsTags
@@ -153,13 +101,16 @@ paths:
         200:
           description: "Восстанавливаем значения к первоначальным, вызывается по нажатию кнопки reset"
           schema:
-            $ref: '#/models/properties/tp_shortcode_flights_special_offer'
+            $ref: '#/models/properties/tp_ducklett_widget'
 models:
   type: object
   description: 'Виджеты перелетов'
   properties:
-    tp_shortcode_flights_prices_map:
-      type: "object"
+    tp_map_widget:
+      type: object
+      description: >
+        [EN]: Map Widget<br/>
+        [RU]: Авиабилеты. Карта цен
       properties:
         map_width:
           allOf:
@@ -175,66 +126,16 @@ models:
             - default: false
         show_logo:
           type: "boolean"
-          description: "Показывать логотип"
-          default: false
-          format: "checkbox"
-    tp_shortcode_flights_hotels_map:
-      type: "object"
-      properties:
-        map_width:
-          allOf:
-            - $ref: '../../variables.yaml#/$map_width'
-            - default: "500"
-        map_height:
-          allOf:
-            - $ref: '../../variables.yaml#/$map_height'
-            - default: "300"
-        pagination_qty:
-          type: "number"
-          description: "Детали булавки - Диаметр"
-          default: "16"
-          format: "input"
-        color_pallete:
-          type: "string"
           description: >
-            Детали булавки - Цветовая схема:
-             * `#A2CCFF` Custom, добавляет 2 поля input - Цвет булавок (pins_color) и Цвет текста (texts_color)
-          enum:
-            - "#98056A"
-            - "#00AFE4"
-            - "#74BA00"
-            - "#DB5521"
-            - "#FFBC00"
-            - "#A2CCFF"
-          default: "#FFBC00"
-          format: "radio"
-        pins_color:
-          type: "string"
-          description: "Детали булавки - Цвет булавок *custom"
-          default: "#A2CCFF"
-          format: "input"
-        texts_color:
-          type: "string"
-          description: "Детали булавки - Цвет текста *custom"
-          default: "#A2CCFF"
-          format: "input"
-        allow_dragging:
-          type: "boolean"
-          description: "Разрешить перетаскивать"
+            [EN]: Show logo<br/>
+            [RU]: Показывать логотип
           default: false
           format: "checkbox"
-        enable_zooming:
-          type: "boolean"
-          description: "Включить масштабирование"
-          default: false
-          format: "checkbox"
-        zooming_during_scrolling:
-          type: "boolean"
-          description: "Масштабирование при прокрутке"
-          default: false
-          format: "checkbox"
-    tp_shortcode_flights_low_price_calendar:
-      type: "object"
+    tp_calendar_widget:
+      type: object
+      description: >
+        [EN]: Calendar Widget<br/>
+        [RU]: Авиабилеты. Календарь низких цен
       properties:
         scalling_width_toggle:
           allOf:
@@ -341,8 +242,11 @@ models:
           allOf:
             - $ref: '../../variables.yaml#/$direct_flight'
             - default: false
-    tp_shortcode_flights_price_change_subscription:
-      type: "object"
+    tp_subscriptions_widget:
+      type: object
+      description: >
+        [EN]: Subscription Widget<br/>
+        [RU]: Авиабилеты. Подписка на изменение цен.
       properties:
         scalling_width_toggle:
           allOf:
@@ -380,19 +284,11 @@ models:
           description: "Цветовая схема - Цвет фона *custom"
           default: "#00B0E2"
           format: "input"
-    tp_shortcode_flights_hotel_widget:
-      type: "object"
-      properties:
-        scalling_width_toggle:
-          allOf:
-            - $ref: '../../variables.yaml#/$scalling_width_toggle'
-            - default: false
-        scalling_width:
-          allOf:
-            - $ref: '../../variables.yaml#/$scalling_width'
-            - default: "661"
-    tp_shortcode_flights_popular_route:
-      type: "object"
+    tp_popular_routes_widget:
+      type: object
+      description: >
+        [EN]: Popular Destinations Widget<br/>
+        [RU]: Авиабилеты. Популярные направления
       properties:
         scalling_width_toggle:
           allOf:
@@ -410,35 +306,11 @@ models:
             - "2"
             - "3"
           format: "radio"
-    tp_shortcode_flights_hotels_selection:
-      type: "object"
-      properties:
-        widget_design:
-          type: "boolean"
-          description: >
-            Дизайн виджета:
-              * `Расширенный` false
-              * `Компактный` true
-          default: true
-          enum:
-            - "Расширенный"
-            - "Компактный"
-          format: "checkbox"
-        scalling_width_toggle:
-          allOf:
-            - $ref: '../../variables.yaml#/$scalling_width_toggle'
-            - default: false
-        scalling_width:
-          allOf:
-            - $ref: '../../variables.yaml#/$scalling_width'
-            - default: "800"
-        selection_hotel_count:
-          type: "number"
-          description: "Количество отелей в подборке"
-          default: "4"
-          format: "inputSlider"
-    tp_shortcode_flights_special_offer:
-      type: "object"
+    tp_ducklett_widget:
+      type: object
+      description: >
+        [EN]: Best deals widget<br/>
+        [RU]: Авиабилеты. Спецпредложения
       properties:
         widget_design:
           type: "boolean"
